--- a/FoodAppAdminFrontend-main/index.html
+++ b/FoodAppAdminFrontend-main/index.html
@@ -13,7 +13,7 @@
     href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
     rel="stylesheet"
 />   
-<link rel="icon"  href="./src/assets/logo2.png" />
+<link rel="icon"  href="./src/assets/Favicon.png" />
 <link rel="stylesheet" href="./index.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FoodXpress</title>
